<resources>
    <string name="app_name">Samba Files Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_server">Server</string>
    <string name="menu_files">Files</string>

    <string name="server_ip">Server IP</string>
    <string name="server_username">Server username</string>
    <string name="server_password">Server password</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="Connecting">Attempting connection to server…</string>
    <string name="server_sharename">Server sharename</string>

    <string name="server_status">Server Status</string>
    <string name="connected">Connected</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="connection_success">Successfully Connected</string>

    <string name="files_placeholder">Select a root folder</string>
    <string name="files_location">Files will be saved at root: %s</string>
    <string name="change_root">Change Root</string>
    <string name="download">Download</string>
</resources>