<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/server_ip_title"
        android:text="@string/server_ip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/field_title_style"/>

    <EditText
        android:id="@+id/server_ip"
        style="@style/field_style"
        android:layout_width="200dp"
        android:hint="@string/server_ip"
        android:inputType="numberDecimal|number"
        android:digits="0123456789."
        app:layout_constraintTop_toBottomOf="@id/server_ip_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/username_title"
        android:text="@string/server_username"
        app:layout_constraintTop_toBottomOf="@id/server_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/field_title_style"/>

    <EditText
        android:id="@+id/username"
        style="@style/field_style"
        android:layout_width="200dp"
        android:hint="@string/server_username"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/username_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/password_title"
        android:text="@string/server_username"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/field_title_style"/>

    <EditText
        android:id="@+id/password"
        style="@style/field_style"
        android:layout_width="200dp"
        android:hint="@string/server_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/sharename_title"
        android:text="@string/server_sharename"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/field_title_style"/>

    <EditText
        android:id="@+id/sharename"
        style="@style/field_style"
        android:layout_width="200dp"
        android:hint="@string/server_sharename"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/sharename_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sharename"
        android:text="@string/connect" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sharename"
        android:text="@string/disconnect" />

    <FrameLayout
        android:id="@+id/loading_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>